<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    android:orientation="vertical"
    tools:context="com.pramont.catcines.catcinema.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_home_footer"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_coyo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_sides"
            android:layout_marginRight="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_top"
            app:cardCornerRadius="@dimen/cornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_coyoacan"
                    android:layout_width="@dimen/square_logo"
                    android:layout_height="@dimen/square_logo"
                    android:src="@mipmap/ic_splash_foreground"/>

                <LinearLayout
                    android:id="@+id/ll_coyo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_sides"
                    android:layout_marginRight="@dimen/margin_sides"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_coyo"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:text="@string/title_coyo"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_addr_coyo"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:hint="@string/addr_coyo"
                        android:textSize="@dimen/hint_size_address"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_map_coyo"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:drawingCacheQuality="auto"
                        android:src="@mipmap/ic_map_layout"/>

                    <ImageView
                        android:id="@+id/iv_call_coyo"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:src="@mipmap/ic_call_layout"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_cineteca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_sides"
            android:layout_marginRight="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_top"
            app:cardCornerRadius="@dimen/cornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_cineteca"
                    android:layout_width="@dimen/square_logo"
                    android:layout_height="@dimen/square_logo"
                    android:src="@mipmap/ic_splash_foreground"/>

                <LinearLayout
                    android:id="@+id/ll_cineteca"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_sides"
                    android:layout_marginRight="@dimen/margin_sides"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_cineteca"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:text="@string/title_cineteca"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_addr_cineteca"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:hint="@string/addr_cineteca"
                        android:textSize="@dimen/hint_size_address"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_map_cineteca"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:drawingCacheQuality="auto"
                        android:src="@mipmap/ic_map_layout"/>

                    <ImageView
                        android:id="@+id/iv_call_cineteca"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:src="@mipmap/ic_call_layout"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_tonala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_sides"
            android:layout_marginRight="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_top"
            app:cardCornerRadius="@dimen/cornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_tonala"
                    android:layout_width="@dimen/square_logo"
                    android:layout_height="@dimen/square_logo"
                    android:background="#393838"
                    android:src="@mipmap/ic_splash_foreground"/>

                <LinearLayout
                    android:id="@+id/ll_tonala"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_sides"
                    android:layout_marginRight="@dimen/margin_sides"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_tonala"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:text="@string/title_tonala"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_addr_tonala"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:hint="@string/addr_tonala"
                        android:textSize="@dimen/hint_size_address"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_map_tonala"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:drawingCacheQuality="auto"
                        android:src="@mipmap/ic_map_layout"/>

                    <ImageView
                        android:id="@+id/iv_call_tonala"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:src="@mipmap/ic_call_layout"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_home_footer"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_coyote_insur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_sides"
            android:layout_marginRight="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_top"
            app:cardCornerRadius="@dimen/cornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_coyote_insur"
                    android:layout_width="@dimen/square_logo"
                    android:layout_height="@dimen/square_logo"
                    android:src="@mipmap/ic_splash_foreground"/>

                <LinearLayout
                    android:id="@+id/ll_coyote_insur"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_sides"
                    android:layout_marginRight="@dimen/margin_sides"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_coyote"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:text="@string/title_coyote_insur"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_addr_coyote"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:hint="@string/addr_coyote_insur"
                        android:textSize="@dimen/hint_size_address"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_map_coyote_insur"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:drawingCacheQuality="auto"
                        android:src="@mipmap/ic_map_layout"/>

                    <ImageView
                        android:id="@+id/iv_call_coyote_insur"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:src="@mipmap/ic_call_layout"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cv_coyote_pol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin_sides"
            android:layout_marginRight="@dimen/margin_sides"
            android:layout_marginTop="@dimen/margin_top"
            app:cardCornerRadius="@dimen/cornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_coyote_pol"
                    android:layout_width="@dimen/square_logo"
                    android:layout_height="@dimen/square_logo"
                    android:src="@mipmap/ic_splash_foreground"/>

                <LinearLayout
                    android:id="@+id/ll_coyote_pol"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_sides"
                    android:layout_marginRight="@dimen/margin_sides"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_coyote_pol"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:text="@string/title_coyote_pol"
                        android:textSize="@dimen/text_size_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_addr_coyote_pol"
                        android:layout_width="@dimen/widthText"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:hint="@string/addr_coyote_pol"
                        android:textSize="@dimen/hint_size_address"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/iv_map_coyote_pol"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:drawingCacheQuality="auto"
                        android:src="@mipmap/ic_map_layout"/>

                    <ImageView
                        android:id="@+id/iv_call_coyote_pol"
                        android:layout_width="@dimen/square"
                        android:layout_height="@dimen/square"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/top_text_views"
                        android:src="@mipmap/ic_call_layout"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_home_footer"/>
    </LinearLayout>
</ScrollView>
